--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </form>
   </section>
   <section id="movieDetails">
-    <h4>Title</h4>
-    <p>Summary</p>
+    <h4 id="Title"> Title</h4>
+    <p id="summary">Summary</p>
   </section>
 </body>
 </html>
